resources/dock/css/preview.css
.PWBorder {
    box-shadow: 0px 0px 5px black;
    position: fixed;
    bottom:65px;
    border: 1px solid rgba(0, 0,0, 0.9);
    border-radius: 6px;
    background: url("../img/preview_background.png");
    opacity: 0;
    -webkit-transition: 0.5s left, 0.4s opacity, 0.5s top;
    pointer-events:none;
}

.PWContainer {
    border-radius: 5px;
    border: 1px solid rgba(255, 255, 255, 0.3);
    background: rgba(0, 0, 0, 0.7);
    display: -webkit-box;
    padding: 5px 6px;
}

.PreviewWindow {
    pointer-events: auto;
    -webkit-box-flex: 1;
    box-sizing: border-box;
    max-width: 230px;
    max-height: 160px;

    border: solid 1px rgba(255, 255, 255, 0.0);
    position:relative;

}

.PreviewWindowActived {
    background: rgba(255, 255, 255, 0.4);
    border: solid 1px rgba(255, 255, 255, 0.5);
}

.PreviewWindow:hover .PWClose{
    display: block;
}

.PWCanvas {
    margin-top: 11.875%;
    /*margin-left: 8.695652173913043%;*/
    display: block;
    margin-left:auto;
    margin-right: auto;
    position:relative;
    max-width: 190px;
    max-height: 110px;
    border: solid 1px rgba(255, 255, 255, 0.8);
    pointer-events: none;
}
.PWCanvas:hover {
    border: solid 1px rgba(0, 255, 255, 0.8);
}

.PWTitle {
    pointer-events: none;
    z-index: 10;
    height: 20px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    text-align: center;
    color: white;
    text-shadow: 0px 1px 3px rgba(0,0,0,0.4), 0px 1px 3px rgba(0,0,0,0.4), 1px 0px 3px rgba(0,0,0,0.4), -0px 0px 3px rgba(0,0,0,0.4);

    position: absolute;
    width: 100%;
    margin-top: 1%;
}
.PWClose {
    background: url("../img/close.png") no-repeat;
    width: 21px;
    height: 16px;
    border-radius: 2px;
    position: absolute;
    top: 0px;
    right: 0px;
    display:none;
    pointer-events:auto;
}
.PWClose:hover {
    background: url("../img/close_hover.png") no-repeat;
    cursor: pointer;
}


.Arrow {
    pointer-events: none;
    position: absolute;
    bottom: -0px;
}

.pop_arrow_up_outer {
    border-top: 7px solid rgba(0, 0, 0, 0.64);
    border-left: 7px solid transparent;
    border-right: 7px solid transparent;

    position: absolute;
    bottom: -7px;
}
.pop_arrow_up_mid {
    position: absolute;
    bottom: -6px;
    border-top: 7px solid rgba(255,255,255, 0.4);
    border-left: 7px solid transparent;
    border-right: 7px solid transparent;
}
.pop_arrow_up_inner {
    position:absolute;
    bottom:-5px;
    border-top: 6px solid rgba(0,0,0,0.77);
    border-left: 7px solid transparent;
    border-right: 6px solid transparent;
}

